--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@angular/platform-browser-dynamic": "^18.2.11",
     "@angular/router": "^18.2.11",
     "primeicons": "^6.0.1",
-    "primeng": "^17.12.0",
+    "primeng": "^17.18.11",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.2",
-    "@angular/cli": "~17.3.2",
+    "@angular-devkit/build-angular": "^18.2.11",
+    "@angular/cli": "~18.2.11",
     "@angular/compiler-cli": "^18.2.11",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
@@ -35,6 +35,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "3.3.3",
     "typescript": "~5.4.3"
   }
 }
